# zero2prod

./: Cargo.toml
migrations/: 20201112022517_create_subscriptions_table.sql
scripts/: init_db.sh
src/: main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
