[package]
name = "zero2prod"
version = "0.1.0"
authors = ["luke"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[dependencies]
actix-rt = "1.1.1"
actix-web = "3.2.0"
chrono = "0.4.19"
config = "0.10.1"
serde = {version = "1.0.117", feautres = ["derive"]}
uuid = { version = "0.8.1", features = ["v4"] }

[dependencies.sqlx]
version = "0.4.0-beta.1"
default-feautres = false
features = ["runtime-tokio-native-tls", "macros", "postgres", "uuid", "chrono", "migrate"]

[dev-dependencies]
reqwest = "0.10.8"
tokio = "0.2.22"

